# open-space-toolkit-astrodynamics

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  .yo-rc.json  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RESEARCH_sequence_constraint_simplification.md  benchmark_result.json  configure  cpp.rst  log.diff  notebook.rst  python.rst  requirements.txt  test_segment_bindings.py  vishwa_test.py
bindings/python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
bindings/python/docs/: Orbit Determination.ipynb  Orbit Propagation Software Demo.ipynb  Orbit Propagation Validation Testing 1.ipynb  Orbit Propagation Validation Testing 2.ipynb  Orbit Propagation.ipynb  Reference.ipynb
bindings/python/docs/Cross-Platform-Validation/: OSTk Cross Platform Validation (Field Data Generation Scenario 1).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 4).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenarios 1-3).ipynb  OSTk Cross Platform Validation (with maneuvers).ipynb  OSTk Cross Platform Validation (without maneuvers).ipynb
bindings/python/docs/Demonstration/: Orbit Determination.ipynb  Orbit Propagation Software Demo.ipynb  Orbit Propagation.ipynb  Sequences and Maneuvers.ipynb  new-orbit-constructors.ipynb
bindings/python/docs/Reference/: Access.ipynb  Trajectory.ipynb
bindings/python/docs/Validation Files/: GMAT_EGM96_24hr_30sInterval_run.csv  GMAT_EGM96_2month_run.csv  GMAT_TwoBodyGravity_24hr_30sInterval_run.csv  GMAT_TwoBodyGravity_24hr_30sInterval_run_RK56.csv  GMAT_TwoBodyGravity_24hr_longInterval_run.csv
bindings/python/docs/Validation-Analysis/: Orbit Propagation Validation Testing RMS Error.ipynb  Orbit Propagation Validation Testing RTN Components.ipynb
bindings/python/docs/Validation-Analysis/Outputfiles/: GMAT_EGM96_24hr_120sInterval_run.csv  GMAT_TwoBodyGravity_24hr_100sInterval_run.csv  GMAT_TwoBodyGravity_24hr_300sInterval_run.csv  GMAT_TwoBodyGravity_24hr_600sInterval_run.csv  GMAT_TwoBody_24hr_run.csv  GMAT_TwoBody_24hr_run_RK56.csv  GMAT_TwoBody_Moon_2hr_run.csv  GMAT_TwoBody_Sun_2hr_run.csv  GMAT_TwoBody_Sun_Moon_2hr_run.csv  STK_EGM2008_100x100NoSecVar_24hr_run.csv  STK_EGM2008_100x100NoSecVar_2hr_run.csv  STK_EGM2008_100x100_24hr_run.csv  STK_EGM96_70x70NoSecVar_24hr_run.csv  STK_EGM96_70x70NoSecVar_2hr_run.csv  STK_EGM96_70x70_24hr_run.csv  STK_WGS84EGM96_70x70_24hr_run.csv  STK_WGS84_70x70_2hr_run.csv
bindings/python/src/: LibraryAstrodynamicsPy.cxx  OpenSpaceToolkitAstrodynamicsPy.cxx
bindings/python/src/LibraryAstrodynamicsPy/: Access.cpp  Flight.cpp  Trajectory.cpp
bindings/python/src/LibraryAstrodynamicsPy/Access/: Generator.cpp
bindings/python/src/OpenSpaceToolkitAstrodynamicsPy/: Access.cpp  Conjunction.cpp  Data.cpp  Dynamics.cpp  Eclipse.cpp  Estimator.cpp  EventCondition.cpp  Flight.cpp  GuidanceLaw.cpp  NumericalSolver.cpp  RootSolver.cpp  Solver.cpp  Solvers.cpp  Trajectory.cpp
bindings/python/test/: __init__.py  conftest.py  memory_leak_tracker.py  memory_leak_tracker_memray.py  memory_leak_tracker_psutil.py  test.sh  test_access.py  test_converters.py  test_dataframe.py  test_display.py  test_event_condition.py  test_import.py  test_memory_leak.py  test_numerical_solver.py  test_numericalsolver.py  test_root_solver.py  test_trajectory.py  test_utilities.py  test_viewer.py
bindings/python/test/Trajectory/Model/: test_nadir.py  (+1 more)
bindings/python/test/access/: __init__.py  test_generator.py  test_visibility_criterion.py
bindings/python/test/conjunction/: test_close_approach.py
bindings/python/test/dynamics/: __init__.py  test_atmospheric_drag.py  test_central_body_gravity.py  test_dynamics.py  test_position_derivative.py  test_tabulated.py  test_third_body_gravity.py  test_thruster.py
bindings/python/test/eclipse/: test_generator.py
bindings/python/test/estimator/: test_observation_filter.py  test_od_least_squares_solver.py  test_orbit_determination_solver.py  test_tle_solver.py
bindings/python/test/event_condition/: test_angular_condition.py  test_boolean_condition.py  test_boolean_event_condition.py  test_brouwer_lyddane_mean_long_condition.py  test_brouwer_lyddane_mean_short_condition.py  test_coe_condition.py  test_conjunctive.py  test_disjunctive.py  test_duration_condition.py  test_logical_condition.py  test_logical_connective.py  test_orbital_element_condition.py  test_real_condition.py  test_real_event_condition.py  test_semi_major_axis_condition.py
bindings/python/test/flight/: __init__.py  test_maneuver.py  test_profile.py  test_satellite_system.py  test_satellitesystem.py  test_system.py
bindings/python/test/guidance_law/: test_constant_thrust.py  test_effectivity_gated_constant_thrust.py  test_effectivity_provider.py  test_guidance_law.py  test_heterogeneous_guidance_law.py  test_in_track.py  test_qlaw.py  test_sequential_guidance_law.py
bindings/python/test/solvers/: test_finite_difference_solver.py  test_least_squares_solver.py  test_temporal_condition_solver.py
bindings/python/test/trajectory/: __init__.py  test_local_orbital_frame_direction.py  test_local_orbital_frame_factory.py  test_model.py  test_orbit.py  test_propagator.py  test_segment.py  test_sequence.py  test_state.py  test_state_builder.py  test_trajectory_segment.py
bindings/python/tools/python/: pyproject.toml.in  setup.cfg.in  setup.py.in
share/python/: CMakeLists.txt  README.md
share/python/notebooks/: Access Computation.ipynb  Orbit Computation.ipynb  Sensor Modeling.ipynb  Tutorial.ipynb  Untitled.ipynb
share/python/notebooks/Reference/: Reference.ipynb
share/python/notebooks/Tutorials/: Access Computation.ipynb  Orbit Computation.ipynb  Sensor Modeling.ipynb
share/python/src/: LibraryAstrodynamicsPy.cxx  LibraryPhysicsPy.cxx
share/python/src/LibraryAstrodynamicsPy/: Access.cpp  Trajectory.cpp
share/python/src/LibraryPhysicsPy/: Types.cpp
share/python/test/: test.sh
share/python/tools/python/: setup.py.in
tutorials/cpp/sensor-modeling/: .gitignore  CMakeLists.txt  Dockerfile  README.md  SensorModeling.cxx  start.sh
(+4564 files in other folders)
